quote name change

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
           <div class="site-heading">
             <h1>Rep's Blog</h1>
             <span class="subheading">A collection of random musings.</span>
-            <br>"{{Quote.content}}"<br><sub>-{{Quote["originator"].name}}</sub>
+            <br>"{{Quote.content}}"
           </div>
         </div>
       </div>
