--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
           <div class="site-heading">
             <h1>Rep's Blog</h1>
             <span class="subheading">A collection of random musings.</span>
-            <br>"{{quote.content}}"<sub>-{{quote.originator.name}}</sub>
+            <br>"{{quote.content}}"<sub><br>-{{quote.originator.name}}</sub>
           </div>
         </div>
       </div>
