--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="google-site-verification" content="googlecdf9e89c65c52c73.html">
   <meta name="author" content="">
 
   <title>Rep's Blog</title>
