google meta change

--- a/templates/header.html
+++ b/templates/header.html
@@ -5,9 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="google-site-verification" content="googlecdf9e89c65c52c73.html">
-  <meta name="author" content="">
-
+   <meta name="author" content="">
+  <meta name="google-site-verification" content="googlecdf9e89c65c52c73">
   <title>Rep's Blog</title>
 
   <!-- Bootstrap core CSS -->
