--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <meta name="author" content="">
-  <meta name="google-site-verification" content="googlecdf9e89c65c52c73">
+ <meta name="google-site-verification" content="QhZ52z-4mWBHcoQbcnbvKaWtyZKx9RkL9STTeBW9s10" />
   <title>Rep's Blog</title>
 
   <!-- Bootstrap core CSS -->
